--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  max-width: calc(100% - 250px);
+  max-width: calc(100% - var(--sidebar-width-variation));
   min-height: 100vh;
   background-color: var(--background-color, #f8f9fa);
   overflow-y: auto;
