--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -1,63 +1,97 @@
 .wrapper {
-    height: 100%;
-    width: 250px;
-    background-color: #f7f7f7;
-    color: #333;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    border-right: 1px solid #e0e0e0;
-    margin-bottom: 0px;
-    
+  height: 100%;
+  width: 250px;
+  background-color: #f7f7f7;
+  color: #333;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-right: 1px solid #e0e0e0;
+  margin-bottom: 0px;
+
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    display: none;
+    height: auto;
+    padding: 10px;
   }
-  
-  @media (max-width: 768px) {
-    .wrapper {
-      display: none;
-      height: auto;
-      padding: 10px;
-    }
-  }
-  
-  .list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    width: 100%;
-    max-height: calc(100vh - 80px); /* Ensures scrollbar appears within the sidebar */
-    scrollbar-width: none; /* Hide scrollbar for Firefox */
-    scroll-behavior: smooth; /* Enable smooth scrolling */
-  
-  }
-  
-  .listItem {
-    margin: 16px 0;
-  }
-  
-  .styledLink {
-    color: #333;
-    text-decoration: none;
-    font-size: 0.8rem;
-    font-weight: 600;
-    padding: 10px 15px;
-    border-radius: 8px;
-    display: block;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .styledLink:hover {
-    background-color: #333;
-    color: #f7f7f7;
-  }
-  
-  .styledLink:focus {
-    outline: 2px solid #f1c40f;
-    outline-offset: 2px;
-  }
-  
-  .styledLinkActive {
-    background-color: #333;
-    color: #f7f7f7;
-  }
-  
+}
+
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  width: 100%;
+  max-height: calc(100vh - 80px);
+  /* Ensures scrollbar appears within the sidebar */
+  scrollbar-width: none;
+  /* Hide scrollbar for Firefox */
+  scroll-behavior: smooth;
+  /* Enable smooth scrolling */
+
+}
+
+.listItem {
+  margin: 16px 0;
+}
+
+.styledLink {
+  color: #333;
+  text-decoration: none;
+  font-size: 0.8rem;
+  font-weight: 600;
+  padding: 10px 15px;
+  border-radius: 8px;
+  display: block;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.styledLink:hover {
+  background-color: #333;
+  color: #f7f7f7;
+}
+
+.styledLink:focus {
+  outline: 2px solid #f1c40f;
+  outline-offset: 2px;
+}
+
+.styledLinkActive {
+  background-color: #333;
+  color: #f7f7f7;
+}
+
+.circleCloser {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  background-color: rgb(141, 141, 141);
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+/* Reopen Sidebar Button */
+.reopenButton {
+  position: fixed;
+  left: 0px;
+  top: 50px;
+  background-color: rgb(141, 141, 141);
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
